APIs/netboxdemo.com/2.4/javascript-client/docs/WritableCircuit.md
# NetBoxApi.WritableCircuit

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**cid** | **String** |  | 
**comments** | **String** |  | [optional] 
**commitRate** | **Number** |  | [optional] 
**created** | **Date** |  | [optional] [readonly] 
**customFields** | **Object** |  | [optional] 
**description** | **String** |  | [optional] 
**id** | **Number** |  | [optional] [readonly] 
**installDate** | **Date** |  | [optional] 
**lastUpdated** | **Date** |  | [optional] [readonly] 
**provider** | **Number** |  | 
**status** | **Number** |  | [optional] 
**tags** | **[String]** |  | [optional] 
**tenant** | **Number** |  | [optional] 
**type** | **Number** |  | 



## Enum: StatusEnum


* `2` (value: `2`)

* `3` (value: `3`)

* `1` (value: `1`)

* `4` (value: `4`)

* `0` (value: `0`)

* `5` (value: `5`)




