APIs/netboxdemo.com/2.8/javascript-client/docs/WritableCircuit.md
# NetBoxApi.WritableCircuit

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**cid** | **String** |  | 
**comments** | **String** |  | [optional] 
**commitRate** | **Number** |  | [optional] 
**created** | **Date** |  | [optional] [readonly] 
**customFields** | **Object** |  | [optional] 
**description** | **String** |  | [optional] 
**id** | **Number** |  | [optional] [readonly] 
**installDate** | **Date** |  | [optional] 
**lastUpdated** | **Date** |  | [optional] [readonly] 
**provider** | **Number** |  | 
**status** | **String** |  | [optional] 
**tags** | **[String]** |  | [optional] 
**tenant** | **Number** |  | [optional] 
**terminationA** | **String** |  | [optional] [readonly] 
**terminationZ** | **String** |  | [optional] [readonly] 
**type** | **Number** |  | 



## Enum: StatusEnum


* `planned` (value: `"planned"`)

* `provisioning` (value: `"provisioning"`)

* `active` (value: `"active"`)

* `offline` (value: `"offline"`)

* `deprovisioning` (value: `"deprovisioning"`)

* `decommissioned` (value: `"decommissioned"`)




